--- a/exemplo-html/estilos/style.css
+++ b/exemplo-html/estilos/style.css
@@ -7,23 +7,20 @@
     box-sizing: border-box;
 }
 
+
 body{
 	background-color:#000;
 	color:#fff;
-    font-family: Montserrat;     
+    font-family: Montserrat;
 }
 
 
 header{
 	display: flex;
   	justify-content: space-between;
-	padding: 13px;
+	padding: 5px;
 	align-items: center;
-}
-
-header span{
-	font-weight: bold;
-	font-size: 2em;
+	max-height: 100px;
 }
 
 nav{	
@@ -47,7 +44,7 @@ main{
 	position: relative;
 	background-color:#818181;
 	color:#fff;
-	padding: 13px;	
+	padding: 13px;		
 }
 
 a {
@@ -70,11 +67,15 @@ h2, h3{
 	text-align: center;
 }
 
-h4{
-	margin-bottom: 2px;
-}
-
 p{
 	padding: 8px;
 	text-align: justify;
+}
+
+footer{
+	display: flex;
+  	justify-content: space-between;
+	padding: 5px;
+	align-items: center;
+	max-height: 100px;
 }
