--- a/exemplo-html/estilos/style.css
+++ b/exemplo-html/estilos/style.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Maven+Pro&family=Roboto&display=swap');
+
 
 *{
     margin: 0;
@@ -7,9 +9,13 @@
     box-sizing: border-box;
 }
 
+html{
+	font-size: 62.5%;	
+}
 
 body{
 	background-color:#000;
+	height: 100vh;	
 	color:#fff;
     font-family: Montserrat;
 }
@@ -18,16 +24,17 @@ body{
 header{
 	display: flex;
   	justify-content: space-between;
-	padding: 5px;
+	padding: 0.5rem;
 	align-items: center;
-	max-height: 100px;
+	height: 10vh;
 }
+
 
 nav{	
 	float: right;	
-	height: 53px;
-	padding: 13px;
-	font-size: 1.2em;
+	height: 5.3rem;
+	padding: 1.3rem;
+	font-size: 1.6rem;
 }
 
 nav ul{
@@ -36,15 +43,17 @@ nav ul{
 
 nav li{	
   	display: inline-block;
-    margin: 0 0 0 13px;
+    margin: 0 0 0 1.6rem;
 }
 
 
 main{
 	position: relative;
 	background-color:#818181;
-	color:#fff;
-	padding: 13px;		
+	color:#fff;	
+    padding: 1.3rem;
+	font-size: 1.6rem;
+	min-height: 80vh;
 }
 
 a {
@@ -54,28 +63,53 @@ a {
 
 a:hover {
 	text-decoration: underline;
+	font-weight: bold;
 	color: gold;
 }
 
 img{	
-	border-radius: 26px;
-	margin: 26px;	
+	border-radius: 2.6rem;
+	margin: 0 2.6rem;	
 }
 
 h2, h3{
-	margin: 13px;
+	margin: 1.3rem;
 	text-align: center;
 }
 
 p{
-	padding: 8px;
+	padding: 0.8rem;
 	text-align: justify;
 }
 
+section{
+	margin: 5rem 0rem;
+	border-radius: 1rem;
+}
+
+section#fontes{
+	background-color: darkgrey;
+	padding: 1.3rem;	
+}
+
+.fonte-01{
+	font-family: 'Roboto', sans-serif;
+	color: #000;
+}
+
+.fonte-02{
+	font-family: 'Maven Pro', sans-serif;
+	color: #0004ff;
+}
+
 footer{
-	display: flex;
+	display: flex;		
   	justify-content: space-between;
-	padding: 5px;
+	padding: 0.5rem;
 	align-items: center;
-	max-height: 100px;
+	height: 10vh;
+}
+
+footer a {
+	height: 8rem;	
 }
