--- a/curso_extensao_frontend/modulo-1/api/fetch_api/requisicoes_get-post/style.css
+++ b/curso_extensao_frontend/modulo-1/api/fetch_api/requisicoes_get-post/style.css
@@ -1,3 +1,11 @@
+@charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+*{
+    margin: 0px;
+    padding: 0px;    
+}
+
 body {
   background-color: #58378C;
   color: #FEFEFE;
